--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -223,13 +223,13 @@ main section h2 {
 }
 
 @media screen and (max-width: 576px) {
-    main ul li {
-      font-size: 14px;
-    }
-    
-    footer {
-      font-size: 18px;
-    }
+  main ul li {
+    font-size: 14px;
+  }
+
+  footer {
+    font-size: 18px;
+  }
 }
 @media screen and (min-width: 577px) {
   .bold {
@@ -268,18 +268,17 @@ main section h2 {
   }
   header {
     text-align: unset;
-    padding: 1em 1.5em;
+    padding: 0em 1.5em;
   }
   header div {
     display: inline-block;
     min-width: 49%;
-
   }
   header div img {
     margin-bottom: 0px;
   }
-  header img,header
-  p {
+  header img,
+  header p {
     display: inline-block;
     vertical-align: middle;
     margin-bottom: 0px;
@@ -287,7 +286,7 @@ main section h2 {
   header nav {
     display: inline-block;
     vertical-align: middle;
-    text-align:end;
+    text-align: end;
     min-width: 50%;
   }
   table {
@@ -297,31 +296,35 @@ main section h2 {
     min-width: 70%;
     border-bottom: 2px solid #3f6bca;
   }
-  article{
+  article {
     line-height: 2.8rem;
   }
-  iframe,section{
+  iframe,
+  section {
     display: inline-block;
-    max-width: 49%;
+    width: 49%;
     min-height: 20rem;
     vertical-align: middle;
-    margin: auto;
-   
+    margin-bottom: none;
   }
-  section{
+  section {
     border-radius: 10px;
+    text-align: start !important;
   }
-  aside h2{
-    margin-block: 3rem;
+  aside h2 {
+    margin-bottom: 3rem;
   }
-  aside div{
+  aside div {
     display: inline-block;
     margin: auto;
+    width: 33%;
   }
-  /* .aside p{
-    display: block;
-  } */
-  .if-form{
+  .if-form {
     text-align: center;
+  }
+
+  header img {
+    max-width: 12rem;
+    margin-right: 10px;
   }
 }
